--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_YOUTUBE_API_KEY=AIzaSyDv1KtuG_ztUWmAFeMEEd4lNomYXvSqe2k
+VITE_FIREBASE_CONFIG="{"apiKey":"AIzaSyAPWhbbkCqDwyZU8zLSwS9bBofqatA7CEU","authDomain":"monikolor-music-app-latest.firebaseapp.com","projectId":"monikolor-music-app-latest","storageBucket":"monikolor-music-app-latest.firebasestorage.app","messagingSenderId":"226299901333","appId":"1:226299901333:web:0ac5bb3847fcbb2091f29c"}"
